fixed header layout issues

--- a/src/app/styles/_base.less
+++ b/src/app/styles/_base.less
@@ -19,3 +19,10 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   border: 0;
   outline : 0;
 }
+
+/* COMMON */
+
+.content-padding {
+  .clearfix();
+  padding: @contentPadding;
+}
